@@ -4,11 +4,13 @@ Revision history for DBIx::Class
           - Support for TEXT/IMAGE columns
           - Support for the 'money' datatype
           - Transaction savepoints support
+          - DateTime inflation support
           - Support for bind variables when connecting to a newer Sybase with
             OpenClient libraries
-          - Support for bind variables over FreeTDS with CASTs when needed
+          - Support for connections via FreeTDS with CASTs for bind variables
+            when needed
           - Support for interpolated variables with proper quoting when
-            connecting to an older Sybase or via FreeTDS
+            connecting to an older Sybase and/or via FreeTDS
         - Fixed a complex prefetch + regular join regression introduced
           in 0.08108
         - SQLT related fixes:
